--- a/scss/style.scss
+++ b/scss/style.scss
@@ -405,7 +405,7 @@ main {
         height: 80%;
         margin: 0 auto;
         margin-top: 50px;
-        background: #232f3a;
+        background: #363c41;
         border-radius: 10px;
         position: relative;
         overflow: hidden;
@@ -413,14 +413,19 @@ main {
         &:before{
             content: '';
             position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 505px;
-            height: 588px;
-            z-index: 1;
-            background: linear-gradient(0deg, transparent, transparent, #C11717, #C11717, #C11717  );
+            top: -22%;
+            left: 24%;
+            width: 252.5px;
+            height: 850px;
+            background: linear-gradient(#C11717,transparent, #C11717);
             animation: brdr 3s linear infinite;
-            transform-origin: bottom right;
+        }
+
+        &::after{
+            content: '';
+            position: absolute;
+            background: #232f3a;
+            inset: 5px;
         }
 
         @keyframes brdr {
@@ -444,6 +449,7 @@ main {
             height: 20%;
             font-family: 'DotGothic16', sans-serif;
             top: 5%;
+            z-index: 10;
 
             input {
                 width: 100%;
@@ -451,6 +457,7 @@ main {
                 outline: none;
                 color: #F5f5f5;
                 font-size: 0.8em;
+                z-index: 10;
 
                 &:hover~span {
                     color: #C11717;
@@ -477,6 +484,7 @@ main {
                 background-color: #f5f5f5;
                 height: 2px;
                 transition: 0.2s ease-in-out;
+                z-index: 10;
             }
 
             span {
@@ -488,6 +496,7 @@ main {
                 color: #c8c8c8;
                 text-transform: uppercase;
                 transition: 0.3s ease-in-out;
+                z-index: 10;
             }
 
 
@@ -498,6 +507,7 @@ main {
             height: 10%;
             margin: 0 auto;
             position: relative;
+            z-index: 10;
 
             textarea {
                 width: 100%;
@@ -531,6 +541,7 @@ main {
                 background-color: #f5f5f5;
                 height: 2px;
                 transition: 0.2s ease-in-out;
+                z-index: 10;
             }
 
             span {
@@ -543,6 +554,7 @@ main {
                 color: #c8c8c8;
                 text-transform: uppercase;
                 transition: 0.3s ease-in-out;
+                z-index: 10;
             }
         }
 
@@ -553,6 +565,7 @@ main {
             width: 100%;
             height: 10%;
             justify-content: center;
+            z-index: 10;
             a{
                 cursor: none;
                 display: block;
