editing the about section

--- a/css/style.css
+++ b/css/style.css
@@ -230,11 +230,11 @@ main .ttl {
   display: flex;
 }
 #aboutWrap .aboutMain .aboutMe {
-  width: 55%;
+  width: 450px;
   height: 50%;
-  margin: auto 10;
+  margin: 0 auto;
   position: relative;
-  top: 5%;
+  top: 0;
 }
 #aboutWrap .aboutMain .aboutMe p {
   font-family: "DotGothic16", sans-serif;
@@ -358,10 +358,10 @@ main .ttl {
 #cntctWrap .inputWrap:before {
   content: "";
   position: absolute;
-  top: -22%;
-  left: 24%;
+  top: -63%;
+  left: 33%;
   width: 252.5px;
-  height: 850px;
+  height: 220%;
   background: linear-gradient(#C11717, transparent, #C11717);
   animation: brdr 3s linear infinite;
 }
@@ -369,7 +369,7 @@ main .ttl {
   content: "";
   position: absolute;
   background: #232f3a;
-  inset: 5px;
+  inset: 7px;
 }
 @keyframes brdr {
   0% {
