--- a/css/reveal.css
+++ b/css/reveal.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap"); */
 .reveal {
 	position: relative;
 	transform: translateX(-150px);
@@ -8,57 +8,5 @@
 
 .reveal.active {
 	transform: translateY(0);
-	opacity: 1;
-}
-
-.btnWrap{
-	width: 90%;
-	height: 10%;
-	margin: 0 auto;
-	display: flex;
-	justify-content: flex-end;
-	z-index: 10;
-}
-
-.btn {
-	width: 150px;
-	height: 50px;
-	font-weight: bold;
-	font-size: 1.3rem;
-	font-family: "Josefin Sans", sans-serif;
-	background: linear-gradient(to left, rgb(193, 23, 23), rgb(73, 72, 70));
-	box-shadow: 5px 5px 0 0;
-	transition: 0.3s;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 20px;
-}
-
-.btn a {
-	position: absolute;
-	text-decoration: none;
-	color: #f5f5f5;
-	z-index: 1000;
-	display: block;
-}
-
-.btn::after {
-	content: "";
-	top: 0;
-	left: 0;
-	width: 150px;
-	height: 50px;
-	background: linear-gradient(to left,rgb(73, 72, 70), rgb(193, 23, 23) );
-	opacity: 0;
-	transition: 0.3s;
-}
-
-.btn:hover {
-	box-shadow: -5px -5px 0 0;
-	transform: scale(0.9);
-}
-
-.btn:hover::after {
 	opacity: 1;
 }
