--- a/scss/style.scss
+++ b/scss/style.scss
@@ -405,7 +405,7 @@ main {
         height: 80%;
         margin: 0 auto;
         margin-top: 50px;
-        background: #363c41;
+        background: #333;
         border-radius: 10px;
         position: relative;
         overflow: hidden;
@@ -424,7 +424,7 @@ main {
         &::after{
             content: '';
             position: absolute;
-            background: #232f3a;
+            background: #202128;
             inset: 7px;
         }
 
