--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,8 +8,9 @@ body {
     cursor: none;
 }
 
+/* 1B2735 */
 body {
-    background: linear-gradient(to left, #262a2f 0%, #090A0F 50%, #1B2735 100%, );
+    background: linear-gradient(to left, #15161b 0%, #090A0F 50%, #15161b 100%, );
 }
 
 .inner-cursor {
