--- a/scss/style.scss
+++ b/scss/style.scss
@@ -418,7 +418,7 @@ main {
             left: 33%;
             width: 252.5px;
             height: 220%;
-            background: linear-gradient(#C11717,transparent, #C11717);
+            background: linear-gradient(#C11717,transparent, #dfdfdf);
             animation: brdr 3s linear infinite;
         }
 
