--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,10 @@ body {
     width: 100%;
     scroll-behavior: smooth;
     cursor: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 /* 1B2735 */
@@ -115,12 +119,8 @@ body {
     width: 100%;
 }
 
-::-webkit-scrollbar {
-    display: none;
-}
-
 .border {
-    border: #C11717 5px solid;
+    border: #C11717 4px solid;
     width: 100%;
     height: 100%;
     position: fixed;
@@ -296,7 +296,6 @@ main {
     height: 70vh;
     margin: 0 auto;
     padding: 20px;
-
 
     .profTtl {
         font-size: 1.2rem;
