--- a/css/style.css
+++ b/css/style.css
@@ -54,64 +54,9 @@ body {
   z-index: -1000;
 }
 
-#arrow {
-  position: fixed;
-  bottom: 30px;
-  width: 100%;
-  z-index: 10;
-}
-#arrow img {
-  display: flex;
-  position: relative;
-  margin: 0 auto;
-}
-#arrow .topArw {
-  animation: topSpin linear infinite 3s;
-}
-#arrow .btmArw {
-  animation: botSpin linear infinite 3s;
-}
-@keyframes topSpin {
-  0% {
-    transform: rotateY(0deg);
-    top: 2px;
-  }
-  50% {
-    transform: rotateY(180deg);
-    top: 5px;
-  }
-  100% {
-    transform: rotateY(0deg);
-    top: 2px;
-  }
-}
-@keyframes botSpin {
-  0% {
-    transform: rotateY(0deg);
-    bottom: 3px;
-  }
-  50% {
-    transform: rotateY(-180deg);
-    bottom: 7px;
-  }
-  100% {
-    transform: rotateY(0deg);
-    bottom: 3px;
-  }
-}
-
 .clear {
   height: 200px;
   width: 100%;
-}
-
-.border {
-  border: #C11717 4px solid;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: 1000;
-  pointer-events: none;
 }
 
 header {
@@ -210,6 +155,51 @@ main .ttl {
 }
 .mainVis #mainTxt p {
   font-size: 1.7rem;
+}
+.mainVis #arrow {
+  width: 100%;
+  z-index: 10;
+  position: relative;
+  bottom: 150px;
+}
+.mainVis #arrow img {
+  display: flex;
+  position: relative;
+  margin: 0 auto;
+}
+.mainVis #arrow .topArw {
+  animation: topSpin linear infinite 2.5s;
+}
+.mainVis #arrow .btmArw {
+  animation: botSpin linear infinite 2.5s;
+}
+@keyframes topSpin {
+  0% {
+    transform: rotateY(0deg);
+    top: 2px;
+  }
+  50% {
+    transform: rotateY(180deg);
+    top: 5px;
+  }
+  100% {
+    transform: rotateY(0deg);
+    top: 2px;
+  }
+}
+@keyframes botSpin {
+  0% {
+    transform: rotateY(0deg);
+    bottom: 3px;
+  }
+  50% {
+    transform: rotateY(-180deg);
+    bottom: 7px;
+  }
+  100% {
+    transform: rotateY(0deg);
+    bottom: 3px;
+  }
 }
 
 #aboutWrap {
@@ -547,6 +537,12 @@ main .ttl {
 }
 #cntctWrap .inputWrap .btnWrap .btn:hover::after {
   opacity: 1;
+}
+
+footer {
+  width: 100%;
+  text-align: center;
+  padding: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
