--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,74 +59,19 @@ body {
     }
 }
 
-#arrow {
-    position: fixed;
-    bottom: 30px;
-    width: 100%;
-    z-index: 10;
-
-    img {
-        display: flex;
-        position: relative;
-        margin: 0 auto;
-    }
-
-    .topArw {
-        animation: topSpin linear infinite 3s;
-    }
-
-    .btmArw {
-        animation: botSpin linear infinite 3s;
-    }
-
-    @keyframes topSpin {
-        0% {
-            transform: rotateY(0deg);
-            top: 2px;
-        }
-
-        50% {
-            transform: rotateY(180deg);
-            top: 5px;
-        }
-
-        100% {
-            transform: rotateY(0deg);
-            top: 2px;
-        }
-    }
-
-    @keyframes botSpin {
-        0% {
-            transform: rotateY(0deg);
-            bottom: 3px;
-        }
-
-        50% {
-            transform: rotateY(-180deg);
-            bottom: 7px;
-        }
-
-        100% {
-            transform: rotateY(0deg);
-            bottom: 3px;
-        }
-    }
-}
-
 .clear {
     height: 200px;
     width: 100%;
 }
 
-.border {
-    border: #C11717 4px solid;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: 1000;
-    pointer-events: none;
-}
+// .border {
+//     border: #C11717 4px solid;
+//     width: 100%;
+//     height: 100%;
+//     position: fixed;
+//     z-index: 1000;
+//     pointer-events: none;
+// }
 
 header {
     width: 100%;
@@ -238,6 +183,61 @@ main {
 
         p {
             font-size: 1.7rem;
+        }
+    }
+
+    #arrow {
+        width: 100%;
+        z-index: 10;
+        position: relative;
+        bottom: 150px;
+    
+        img {
+            display: flex;
+            position: relative;
+            margin: 0 auto;
+        }
+    
+        .topArw {
+            animation: topSpin linear infinite 2.5s;
+        }
+    
+        .btmArw {
+            animation: botSpin linear infinite 2.5s;
+        }
+    
+        @keyframes topSpin {
+            0% {
+                transform: rotateY(0deg);
+                top: 2px;
+            }
+    
+            50% {
+                transform: rotateY(180deg);
+                top: 5px;
+            }
+    
+            100% {
+                transform: rotateY(0deg);
+                top: 2px;
+            }
+        }
+    
+        @keyframes botSpin {
+            0% {
+                transform: rotateY(0deg);
+                bottom: 3px;
+            }
+    
+            50% {
+                transform: rotateY(-180deg);
+                bottom: 7px;
+            }
+    
+            100% {
+                transform: rotateY(0deg);
+                bottom: 3px;
+            }
         }
     }
 }
@@ -637,4 +637,10 @@ main {
             }
         }
     }
+}
+
+footer{
+    width: 100%;
+    text-align: center;
+    padding: 20px;
 }
