--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ main .ttl {
   height: 100vh;
 }
 .mainVis #mainTxt {
-  top: 20%;
+  top: 25%;
   position: relative;
   width: 50%;
   height: 100%;
@@ -543,6 +543,7 @@ footer {
   width: 100%;
   text-align: center;
   padding: 20px;
+  margin-left: 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
