--- a/scss/style.scss
+++ b/scss/style.scss
@@ -146,7 +146,7 @@ main {
     height: 100vh;
 
     #mainTxt {
-        top: 20%;
+        top: 25%;
         position: relative;
         width: 50%;
         height: 100%;
@@ -643,4 +643,5 @@ footer{
     width: 100%;
     text-align: center;
     padding: 20px;
+    margin-left: 15px;
 }
