--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,7 @@ main .ttl {
   height: 75vh;
   margin: 0 auto;
   padding: 20px;
+  border: solid 1px red;
 }
 #aboutWrap .aboutTtl {
   font-size: 1.2rem;
@@ -217,12 +218,13 @@ main .ttl {
 }
 #aboutWrap .aboutMain {
   width: 100%;
-  height: 100%;
+  height: 92%;
   display: flex;
+  border: solid 1px skyblue;
 }
 #aboutWrap .aboutMain .aboutMe {
   width: 450px;
-  height: 80%;
+  height: 100%;
   margin: 0 auto;
   position: relative;
   top: 0;
@@ -237,13 +239,13 @@ main .ttl {
   width: 80%;
   margin: 0 auto;
   height: 100%;
-  font-size: 0.7em;
+  font-size: 1.4vw;
 }
 #aboutWrap .aboutMain .aboutPic {
   border: #F5f5f5 solid 3px;
   border-radius: 10px;
-  width: 350px;
-  height: 550px;
+  width: 24vw;
+  height: 34vw;
   background: url(../img/main.jpeg) left top/cover;
   margin: 0 auto;
 }
