--- a/scss/style.scss
+++ b/scss/style.scss
@@ -247,7 +247,7 @@ main {
     height: 75vh;
     margin: 0 auto;
     padding: 20px;
-
+    border: solid 1px red;
 
     .aboutTtl {
         font-size: 1.2rem;
@@ -259,12 +259,12 @@ main {
 
     .aboutMain {
         width: 100%;
-        height: 100%;
-        display: flex;
+        height: 92%;
+        display: flex;border: solid 1px skyblue;
 
         .aboutMe {
             width: 450px;
-            height: 80%;
+            height: 100%;
             margin: 0 auto;
             position: relative;
             top: 0;
@@ -279,15 +279,15 @@ main {
                 width: 80%;
                 margin: 0 auto;
                 height: 100%;
-                font-size: 0.7em;
+                font-size: 1.4vw;
             }
         }
 
         .aboutPic {
             border: #F5f5f5 solid 3px;
             border-radius: 10px;
-            width: 350px;
-            height: 550px;
+            width: 24vw;
+            height: 34vw;
             background: url(../img/main.jpeg) left top/cover;
             margin: 0 auto;
         }
