--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,6 @@ main .ttl {
   height: 75vh;
   margin: 0 auto;
   padding: 20px;
-  border: solid 1px red;
 }
 #aboutWrap .aboutTtl {
   font-size: 1.2rem;
@@ -220,7 +219,6 @@ main .ttl {
   width: 100%;
   height: 92%;
   display: flex;
-  border: solid 1px skyblue;
 }
 #aboutWrap .aboutMain .aboutMe {
   width: 450px;
@@ -228,7 +226,6 @@ main .ttl {
   margin: 0 auto;
   position: relative;
   top: 0;
-  border: solid 1px tomato;
   overflow: hidden;
   text-overflow: ellipsis;
   word-wrap: break-word;
@@ -551,6 +548,12 @@ footer {
   text-align: center;
   padding: 20px;
   margin-left: 15px;
+}
+
+@media only screen and (min-width: 768px) {
+  .aboutMe {
+    border: solid 1px tomato;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
