--- a/scss/style.scss
+++ b/scss/style.scss
@@ -170,10 +170,14 @@ main {
                 stroke-dashoffset: 650px;
                 stroke-linecap: round;
                 stroke-linejoin: round;
-                animation: drawStroke 3s linear forwards;
+                animation: drawStroke 6s linear forwards infinite;
             }
 
             @keyframes drawStroke {
+                40% {
+                    stroke-dashoffset: 0;
+                }
+                
                 100% {
                     stroke-dashoffset: 0;
                 }
@@ -242,6 +246,59 @@ main {
     }
 }
 
+// #aboutWrap {
+//     width: 100%;
+//     height: 75vh;
+//     margin: 0 auto;
+//     padding: 20px;
+
+//     .aboutTtl {
+//         font-size: 1.2rem;
+//         border-bottom: #C11717 3px solid;
+//         width: 12%;
+//         text-align: center;
+//         margin-bottom: 20px;
+//     }
+
+//     .aboutMain {
+//         width: 100%;
+//         height: 92%;
+//         display: flex;
+
+//         .aboutMe {
+//             width: 450px;
+//             height: 100%;
+//             margin: 0 auto;
+//             position: relative;
+//             top: 0;
+//             overflow: hidden;
+//             text-overflow: ellipsis;
+//             word-wrap: break-word;
+//             display: block;
+
+//             p {
+//                 font-family: 'DotGothic16', sans-serif;
+//                 width: 80%;
+//                 margin: 0 auto;
+//                 height: 100%;
+//                 font-size: 1.4vw;
+//             }
+
+//         }
+
+
+//         .aboutPic {
+//             border: #F5f5f5 solid 3px;
+//             border-radius: 10px;
+//             width: 24vw;
+//             height: 34vw;
+//             background: url(../img/main.jpeg) left top/cover;
+//             margin: 0 auto;
+//         }
+//     }
+
+// }
+
 #aboutWrap {
     width: 100%;
     height: 75vh;
@@ -257,13 +314,10 @@ main {
     }
 
     .aboutMain {
-        width: 100%;
-        height: 92%;
         display: flex;
 
         .aboutMe {
-            width: 450px;
-            height: 100%;
+            width: 50%;
             margin: 0 auto;
             position: relative;
             top: 0;
@@ -279,9 +333,7 @@ main {
                 height: 100%;
                 font-size: 1.4vw;
             }
-
         }
-
 
         .aboutPic {
             border: #F5f5f5 solid 3px;
@@ -294,6 +346,7 @@ main {
     }
 
 }
+
 
 #profWrap {
     width: 100%;
@@ -334,7 +387,7 @@ main {
 
             .classcode {
                 display: block;
-                width: 90%;
+                width: 100%;
 
                 &:hover {
                     background: #1f2935;
@@ -651,8 +704,11 @@ footer {
     margin-left: 15px;
 }
 
-@media only screen and (min-width: 768px) {
-    .aboutMe{
-        border: solid 1px tomato;
+@media screen and (min-width: 1450px) {
+    .classel{
+        span{
+            border: solid 1px tomato;
+            width: 100px;
+        }
     }
 }
