--- a/scss/style.scss
+++ b/scss/style.scss
@@ -372,12 +372,12 @@ main {
         .classwrap {
             position: relative;
             z-index: 2;
-            left: 5%;
+            left: 7%;
 
             &::before {
                 content: attr(data-value);
                 display: block;
-                width: 20px;
+                width: 30px;
                 height: 100%;
                 position: absolute;
                 left: -50px;
@@ -388,6 +388,7 @@ main {
             .classcode {
                 display: block;
                 width: 100%;
+                margin-left: 15px;
 
                 &:hover {
                     background: #1f2935;
@@ -702,13 +703,4 @@ footer {
     text-align: center;
     padding: 20px;
     margin-left: 15px;
-}
-
-@media screen and (min-width: 1450px) {
-    .classel{
-        span{
-            border: solid 1px tomato;
-            width: 100px;
-        }
-    }
 }
