--- a/scss/style.scss
+++ b/scss/style.scss
@@ -105,7 +105,7 @@ header {
                     width: 90%;
                     display: block;
                     text-decoration: none;
-                    border-bottom: 2px solid #C11717;
+                    border-bottom: 0.5px solid #C11717;
                     color: #F5f5f5;
                     background-image: linear-gradient(#C11717 0 0);
                     background-size: 200% .08em;
@@ -135,7 +135,7 @@ main {
         position: relative;
         width: 30%;
         text-align: center;
-        border-bottom: 3px solid #C11717;
+        border-bottom: 1px solid #C11717;
         font-size: 1rem;
         top: 10px;
     }
@@ -246,59 +246,6 @@ main {
     }
 }
 
-// #aboutWrap {
-//     width: 100%;
-//     height: 75vh;
-//     margin: 0 auto;
-//     padding: 20px;
-
-//     .aboutTtl {
-//         font-size: 1.2rem;
-//         border-bottom: #C11717 3px solid;
-//         width: 12%;
-//         text-align: center;
-//         margin-bottom: 20px;
-//     }
-
-//     .aboutMain {
-//         width: 100%;
-//         height: 92%;
-//         display: flex;
-
-//         .aboutMe {
-//             width: 450px;
-//             height: 100%;
-//             margin: 0 auto;
-//             position: relative;
-//             top: 0;
-//             overflow: hidden;
-//             text-overflow: ellipsis;
-//             word-wrap: break-word;
-//             display: block;
-
-//             p {
-//                 font-family: 'DotGothic16', sans-serif;
-//                 width: 80%;
-//                 margin: 0 auto;
-//                 height: 100%;
-//                 font-size: 1.4vw;
-//             }
-
-//         }
-
-
-//         .aboutPic {
-//             border: #F5f5f5 solid 3px;
-//             border-radius: 10px;
-//             width: 24vw;
-//             height: 34vw;
-//             background: url(../img/main.jpeg) left top/cover;
-//             margin: 0 auto;
-//         }
-//     }
-
-// }
-
 #aboutWrap {
     width: 100%;
     height: 75vh;
@@ -307,7 +254,7 @@ main {
 
     .aboutTtl {
         font-size: 1.2rem;
-        border-bottom: #C11717 3px solid;
+        border-bottom: #C11717 1px solid;
         width: 12%;
         text-align: center;
         margin-bottom: 20px;
@@ -330,13 +277,20 @@ main {
                 font-family: 'DotGothic16', sans-serif;
                 width: 80%;
                 margin: 0 auto;
-                height: 100%;
-                font-size: 1.4vw;
+                height: 90%;
+                font-size: 1.3vw;
+                position: relative;
+                top: 4%;
+                .br{
+                    margin-bottom: 1em;
+                    display: block;
+                }
             }
         }
 
         .aboutPic {
-            border: #F5f5f5 solid 3px;
+            position: relative;
+            left: 6%;
             border-radius: 10px;
             width: 24vw;
             height: 34vw;
@@ -356,7 +310,7 @@ main {
 
     .profTtl {
         font-size: 1.2rem;
-        border-bottom: #C11717 3px solid;
+        border-bottom: #C11717 1px solid;
         width: 14%;
         text-align: center;
         margin-bottom: 20px;
@@ -435,7 +389,7 @@ main {
     padding: 20px;
 
     .worksttl {
-        border-bottom: 3px #C11717 solid;
+        border-bottom: 1px #C11717 solid;
         width: 14%;
         text-align: center;
         margin-bottom: 20px;
@@ -450,7 +404,7 @@ main {
     padding: 20px;
 
     .cntctTtl {
-        border-bottom: 3px #C11717 solid;
+        border-bottom: 1px #C11717 solid;
         width: 18%;
         text-align: center;
         margin-bottom: 20px;
