--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,7 +5,7 @@ body {
     height: 100%;
     width: 100%;
     scroll-behavior: smooth;
-    cursor: none;
+    // cursor: none;
 
     &::-webkit-scrollbar {
         display: none;
@@ -19,7 +19,7 @@ body {
 
 .inner-cursor {
     position: fixed;
-    left: 10px;
+    left: 20px;
     width: 20px;
     height: 20px;
     transform: translate(-50%, -50%);
@@ -30,12 +30,12 @@ body {
     border-radius: 50%;
     pointer-events: none;
     transition: width 0.5s, height 0.5s;
-    animation: color 5s infinite;
+    animation: color 9s infinite;
     z-index: 1000;
 
     &.grow {
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
         transition: width 0.5s, height 0.5s;
     }
 
@@ -44,8 +44,12 @@ body {
             filter: hue-rotate(0deg);
         }
 
-        100% {
+        50% {
             filter: hue-rotate(360deg);
+        }
+
+        100% {
+            filter: hue-rotate(0deg);
         }
     }
 }
@@ -63,15 +67,6 @@ body {
     height: 200px;
     width: 100%;
 }
-
-// .border {
-//     border: #C11717 4px solid;
-//     width: 100%;
-//     height: 100%;
-//     position: fixed;
-//     z-index: 1000;
-//     pointer-events: none;
-// }
 
 header {
     width: 100%;
@@ -177,7 +172,7 @@ main {
                 40% {
                     stroke-dashoffset: 0;
                 }
-                
+
                 100% {
                     stroke-dashoffset: 0;
                 }
@@ -282,7 +277,8 @@ main {
                 // line-height: 30px;
                 position: relative;
                 top: 3%;
-                .br{
+
+                .br {
                     margin-bottom: 1em;
                     display: block;
                 }
@@ -290,13 +286,45 @@ main {
         }
 
         .aboutPic {
-            position: relative;
-            left: 6%;
-            border-radius: 10px;
-            width: 24vw;
-            height: 34vw;
+            padding: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        width: 24vw;
+        height: 34vw;
+        margin: 0 auto;
+        background: #333;
+        border-radius: 10px;
+        position: relative;
+        overflow: hidden;
+
+        &:before {
+            content: '';
+            position: absolute;
+            top: -63%;
+            left: 33%;
+            width: 252.5px;
+            height: 220%;
+            background: linear-gradient(#fdf4fd, transparent, #fdf4fd);
+            animation: brdrImg 3s linear infinite;
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            background: #202128;
+            inset: 7px;
             background: url(../img/main.jpeg) left top/cover;
-            margin: 0 auto;
+        }
+
+        @keyframes brdrImg {
+            0% {
+                transform: rotate(360deg);
+            }
+
+            100% {
+                transform: rotate(0deg);
+            }
+        }
         }
     }
 
@@ -344,6 +372,7 @@ main {
                 display: block;
                 width: 85%;
                 margin-left: 15px;
+                transition: 100ms;
 
                 &:hover {
                     background: #1f2935;
@@ -513,7 +542,6 @@ main {
                 transition: 0.3s ease-in-out;
                 z-index: 10;
             }
-
 
         }
 
