--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 html,
 body {
   font-size: 140%;
-  color: #F5f5f5;
+  color: #f5f5f5;
   height: 100%;
   width: 100%;
   scroll-behavior: smooth;
@@ -13,7 +13,7 @@ body::-webkit-scrollbar {
 
 /* 1B2735 */
 body {
-  background: linear-gradient(to left, #15161b 0%, #090A0F 50%, #15161b 100%);
+  background: linear-gradient(to left, #15161b 0%, #090a0f 50%, #15161b 100%);
 }
 
 .inner-cursor {
@@ -22,7 +22,7 @@ body {
   width: 20px;
   height: 20px;
   transform: translate(-50%, -50%);
-  background-color: #C11717;
+  background-color: #c11717;
   box-shadow: 0 0 20px #dc2727, 0 0 60px #dc2727;
   mix-blend-mode: difference;
   border-radius: 50%;
@@ -68,7 +68,7 @@ header {
   position: fixed;
 }
 header .active {
-  background: #C11717;
+  background: #c11717;
   transition: 0.2s ease-in-out;
 }
 header .navi {
@@ -92,9 +92,9 @@ header .navi ul li a {
   width: 90%;
   display: block;
   text-decoration: none;
-  border-bottom: 1px solid #C11717;
-  color: #F5f5f5;
-  background-image: linear-gradient(#C11717 0 0);
+  border-bottom: 1px solid #c11717;
+  color: #f5f5f5;
+  background-image: linear-gradient(#c11717 0 0);
   background-size: 200% 0.08em;
   background-position: 200% 100%;
   background-repeat: no-repeat;
@@ -116,7 +116,7 @@ main .ttl {
   position: relative;
   width: 30%;
   text-align: center;
-  border-bottom: 1px solid #C11717;
+  border-bottom: 1px solid #c11717;
   font-size: 1rem;
   top: 10px;
 }
@@ -133,7 +133,7 @@ main .ttl {
   text-align: center;
 }
 .mainVis #mainTxt h2 {
-  font-size: 3rem;
+  font-size: clamp(1.5rem, 2vw, 3rem);
 }
 .mainVis #mainTxt #svg {
   position: relative;
@@ -142,7 +142,7 @@ main .ttl {
 .mainVis #mainTxt #svg,
 .mainVis #mainTxt #svg path {
   fill: none;
-  stroke: #C11717;
+  stroke: #c11717;
   stroke-width: 5px;
   stroke-dasharray: 710px;
   stroke-dashoffset: 650px;
@@ -215,7 +215,7 @@ main .ttl {
 }
 #aboutWrap .aboutTtl {
   font-size: 1.2rem;
-  border-bottom: #C11717 1px solid;
+  border-bottom: #c11717 1px solid;
   width: 12%;
   text-align: center;
   margin-bottom: 20px;
@@ -238,7 +238,7 @@ main .ttl {
   width: 80%;
   margin: 0 auto;
   height: 90%;
-  font-size: 1.3vw;
+  font-size: clamp(0.2rem, 2vw, 0.9rem);
   position: relative;
   top: 3%;
 }
@@ -292,13 +292,13 @@ main .ttl {
 }
 #profWrap .profTtl {
   font-size: 1.2rem;
-  border-bottom: #C11717 1px solid;
+  border-bottom: #c11717 1px solid;
   width: 14%;
   text-align: center;
   margin-bottom: 20px;
 }
 #profWrap .profMain {
-  font-size: 1.2rem;
+  font-size: clamp(0.8rem, 2vw, 1.2rem);
 }
 #profWrap .profMain p {
   margin-bottom: 3px;
@@ -335,7 +335,7 @@ main .ttl {
   margin-left: 65px;
 }
 #profWrap .profMain .classwrap .classcode .classel {
-  color: #C11717;
+  color: #c11717;
 }
 #profWrap .profMain .classwrap .classcode .classprod {
   color: #c678dd;
@@ -358,7 +358,7 @@ main .ttl {
   padding: 20px;
 }
 #worksWrap .worksttl {
-  border-bottom: 1px #C11717 solid;
+  border-bottom: 1px #c11717 solid;
   width: 14%;
   text-align: center;
   margin-bottom: 20px;
@@ -371,7 +371,7 @@ main .ttl {
   padding: 20px;
 }
 #cntctWrap .cntctTtl {
-  border-bottom: 1px #C11717 solid;
+  border-bottom: 1px #c11717 solid;
   width: 18%;
   text-align: center;
   margin-bottom: 20px;
@@ -396,7 +396,7 @@ main .ttl {
   left: 33%;
   width: 252.5px;
   height: 220%;
-  background: linear-gradient(#C11717, transparent, #C11717);
+  background: linear-gradient(#c11717, transparent, #c11717);
   animation: brdr 3s linear infinite;
 }
 #cntctWrap .inputWrap::after {
@@ -429,15 +429,15 @@ main .ttl {
   width: 100%;
   padding: 10px;
   outline: none;
-  color: #F5f5f5;
+  color: #f5f5f5;
   font-size: 0.8em;
   z-index: 10;
 }
 #cntctWrap .inputWrap .inputBox input:hover ~ span {
-  color: #C11717;
+  color: #c11717;
 }
 #cntctWrap .inputWrap .inputBox input:valid ~ span, #cntctWrap .inputWrap .inputBox input:focus ~ span {
-  color: #C11717;
+  color: #c11717;
   transform: translateX(2px) translateY(-17px);
   font-size: 0.6em;
   padding: 0 10px;
@@ -445,7 +445,7 @@ main .ttl {
   letter-spacing: 0.2em;
 }
 #cntctWrap .inputWrap .inputBox input:focus ~ .line {
-  background-color: #C11717;
+  background-color: #c11717;
 }
 #cntctWrap .inputWrap .inputBox .line {
   width: 100%;
@@ -476,15 +476,15 @@ main .ttl {
   width: 100%;
   padding: 10px;
   outline: none;
-  color: #F5f5f5;
+  color: #f5f5f5;
   font-size: 0.8em;
   resize: none;
 }
 #cntctWrap .inputWrap .txtarea textarea:hover ~ span {
-  color: #C11717;
+  color: #c11717;
 }
 #cntctWrap .inputWrap .txtarea textarea:valid ~ span, #cntctWrap .inputWrap .txtarea textarea:focus ~ span {
-  color: #C11717;
+  color: #c11717;
   transform: translateX(2px) translateY(-17px);
   font-size: 0.6em;
   padding: 0 10px;
@@ -492,7 +492,7 @@ main .ttl {
   letter-spacing: 0.2em;
 }
 #cntctWrap .inputWrap .txtarea textarea:focus ~ .line {
-  background-color: #C11717;
+  background-color: #c11717;
 }
 #cntctWrap .inputWrap .txtarea .line {
   width: 100%;
@@ -533,7 +533,7 @@ main .ttl {
   transition: 0.2s ease-in-out;
 }
 #cntctWrap .inputWrap .icons a svg:hover {
-  fill: #C11717;
+  fill: #c11717;
 }
 #cntctWrap .inputWrap .btnWrap {
   width: 90%;
